--- a/src/app/shared/img-single/img-single.component.html
+++ b/src/app/shared/img-single/img-single.component.html
@@ -1,3 +1,6 @@
+<div class="img-container" *ngIf="data.link">
+    <img [src]="data.link" alt="" class="attach-image">
+</div>
 <div class="img-container" (click)="openFileReader()">
     <button>+ 사진선택</button>
 </div>
