--- a/src/styles.scss
+++ b/src/styles.scss
@@ -157,3 +157,14 @@ h1, h2, h3, h4, h5, h6{
     justify-content: space-between;
 }
 .file{display: none;}
+.attach-image{
+    width: 100px; 
+    height: 100px; 
+    border-radius: 5px;
+    position: relative;
+    top: -1px;
+}
+.btn-save{
+    float: right;
+    margin: 10px 0;
+}
