room component added

--- a/src/app/admin/accom/unit/edit/edit.component.html
+++ b/src/app/admin/accom/unit/edit/edit.component.html
@@ -28,9 +28,9 @@
                 <div class="content-body">
                     <div *ngIf="selectedTab === 0" class="form-unit">
                         <form [formGroup]="formunit">
-                            <h5>객실 이름을 입력해주세요.</h5>
+                            <h5>객실 타입명을 입력해주세요.</h5>
                             <mat-form-field>
-                                <mat-label>객실명</mat-label>
+                                <mat-label>객실 타입명</mat-label>
                                 <input type="text" matInput placeholder="객실 이름" autocomplete="off"
                                 formControlName="UnitNm">
                             </mat-form-field>
