--- a/src/app/admin/accom/accom.component.scss
+++ b/src/app/admin/accom/accom.component.scss
@@ -1,3 +1,49 @@
 .content-body{
     h4{margin: 0;}
+
+}
+.split-container{
+    height: calc(100% - 46px);
+    margin: 0 auto;
+    max-width: 650px;
+
+    .form-splitter{
+        border: 1px solid #ddd;
+        border-radius: 5px;
+        box-shadow: 0px 1px 3px 0px #aaa;
+        height: calc(100% - 5px);
+        .split-side{
+            height: 100%;
+            background-color: #f6f6f6;
+            border-right: 1px solid #ddd;
+            
+            ul li{
+                padding: 20px;
+                cursor: pointer;
+                font-weight: 600;
+                font-size: 14px;
+                color: #444;
+                &:hover{
+                    background-color: #ddd;
+                }
+            }
+        }
+
+        .content-header{
+            border-bottom: 1px solid #ddd;
+            padding: 20px;
+            background-color: #f6f6f6;
+
+            span{
+                vertical-align: super;
+            }
+        }
+
+        .content-body{
+            padding: 20px;
+            padding-top: 0;
+            margin: 10px 0;
+            height: calc(100% - 110px);
+        }
+    }
 }
