swiper module added

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,8 @@
 
 // Import common styles
 @import 'app-common';
+@import '~swiper/swiper-bundle';
+@import '~swiper/swiper';
 
 html, body {
     height: 100%;
