--- a/src/app/app.component.tns.html
+++ b/src/app/app.component.tns.html
@@ -1,5 +1,3 @@
-<Page>
-  <StackLayout>
-      <page-router-outlet actionBarVisibility="never"></page-router-outlet>
-  </StackLayout>
-</Page>
+<GridLayout>
+  <page-router-outlet actionBarVisibility="never"></page-router-outlet>
+</GridLayout>
