--- a/src/app/home/home.component.tns.html
+++ b/src/app/home/home.component.tns.html
@@ -1,4 +1,6 @@
-<StackLayout  class="p-20">
-    <Label [text]="'Welcome to ' + title + '!'" class="h1 text-center" textWrap="true"></Label>
+<GridLayout>
     <page-router-outlet actionBarVisibility="never"></page-router-outlet>
-</StackLayout>
+    <GridLayout verticalAlignment="bottom">
+        <app-footer></app-footer>
+    </GridLayout>
+</GridLayout>
