메인 페이지 퍼블리싱 추가 	modified:   README.md 	modified:   angular.json 	modified:   package-lock.json 	modified:   src/app/home/home.component.html 	modified:   src/app/home/layout/footer/footer.component.html 	modified:   src/app/home/layout/header/header.component.html 	modified:   src/app/home/main/main.component.html 	modified:   src/app/home/main/main.component.scss 	new file:   src/assets/css/font.css 	new file:   src/assets/css/layout.css 	new file:   src/assets/images/arrow.png 	new file:   src/assets/images/logo.png 	new file:   src/assets/images/minus.png 	new file:   src/assets/images/pa_end.png 	new file:   src/assets/images/pa_next.png 	new file:   src/assets/images/partner_bn.png 	new file:   src/assets/images/plus.png 	new file:   src/assets/images/s_arrow.png 	new file:   src/assets/images/search.png 	new file:   src/assets/images/thumb/thumb1.png 	new file:   src/assets/images/thumb/thumb2.png 	new file:   src/assets/images/thumb/thumb3.png 	new file:   src/assets/images/thumb/thumb4.png 	new file:   src/assets/images/thumb/thumb5.png 	new file:   src/assets/images/thumb/thumb6.png 	new file:   src/assets/images/thumb/thumb7.png 	new file:   src/assets/images/visual.png 	modified:   src/index.html 	modified:   tsconfig.json

--- a/src/app/home/main/main.component.html
+++ b/src/app/home/main/main.component.html
@@ -1,1 +1,290 @@
-<app-swiper></app-swiper>
+
+<div id="main">
+    <div class="visual">
+        <div class="visualBox arrow_box">
+            <!-- 비주얼 영역 -->
+            <!-- 슬라이드 -->
+        </div>
+        <div class="content">
+            <div class="reserv_box">
+                <div class="reserv_item loc">
+                    <!-- 레이어 팝업(지역) -->
+                    <!-- <div class="reserv_layer loc">
+                        <ul>
+                            <li><a href="#" role="button">전국</a></li>
+                            <li><a href="#" role="button">서울/경기/인천</a></li>
+                            <li><a href="#" role="button">충청/대전</a></li>
+                            <li><a href="#" role="button">전라/광주</a></li>
+                            <li><a href="#" role="button">경상/대구/부산/울산</a></li>
+                            <li><a href="#" role="button">강원</a></li>
+                            <li><a href="#" role="button">제주</a></li>
+                        </ul>
+                    </div> -->
+                    <!-- //레이어 팝업(지역) -->
+                    <dl>
+                        <dt>지역</dt>
+                        <dd>강원</dd>
+                    </dl>
+                </div>
+                <div class="reserv_item date">
+                    <!-- 레이어 팝업(날짜) -->
+                    <!-- 달력 -->
+                    <!-- <div class="reserv_layer date">
+                    </div> -->
+                    <!-- //레이어 팝업(날짜) -->
+                    <dl>
+                        <dt>예약일자</dt>
+                        <dd>2021년 9월 9일(목)</dd>
+                    </dl>
+                    <dl>
+                        <dt>퇴실일자</dt>
+                        <dd>2021년 9월 10일(금)</dd>
+                    </dl>
+                </div>
+                <div class="reserv_item number">
+                    <!-- 레이어 팝업(인원) -->
+                    <!-- <div class="reserv_layer number">
+                        <dl>
+                            <dt>인원</dt>
+                            <dd>
+                                <div class="countNum_box">
+                                    <button class="minus_btn"></button>
+                                    <input type="text" class="count_inp" value="5" disabled>
+                                    <button class="plus_btn"></button>
+                                </div>
+                            </dd>
+                        </dl>
+                    </div> -->
+                    <!-- //레이어 팝업(인원) -->
+                    <dl>
+                        <dt>인원수</dt>
+                        <dd>4명</dd>
+                    </dl>
+                </div>
+                <button class="reserv_item reserv_btn">예약하기</button>
+            </div>
+        </div>
+    </div>
+    <section class="sec_popular">
+        <div class="content">
+            <h2>모빌라 인기상품</h2>
+            <div class="popular_box arrow_box">
+                <button class="arrow prev_arrow"></button>
+                <ul class="ul_h">
+                    <!-- loop -->
+                    <li>
+                        <a href="#">
+                            <div class="popular_item_img">
+                                <p class="loc_tag">가평군</p>
+                                <img src="assets/images/thumb/thumb1.png" alt="">
+                            </div>
+                            <dl class="popular_item_desc">
+                                <dt>남이섬 베스트 카라반</dt>
+                                <dd>자연 계곡과 맑은 공기를 만끽하세요. 자연 계곡과 맑은 공기를 만끽하세요. 자연 계곡과 맑은 공기를 만끽하세요. 자연 계곡과 맑은 공기를 만끽하세요. </dd>
+                                <dd class="price">
+                                    <dl>
+                                        <dt>주중</dt>
+                                        <dd>50,000 원</dd>
+                                    </dl>
+                                    <dl>
+                                        <dt>주말</dt>
+                                        <dd>200,000 원</dd>
+                                    </dl>
+                                </dd>
+                            </dl>
+                        </a>
+                    </li>
+                    <!-- //loop -->
+                    <li>
+                        <a href="#">
+                            <div class="popular_item_img">
+                                <p class="loc_tag">가평군</p>
+                                <img src="assets/images/thumb/thumb2.png" alt="">
+                            </div>
+                            <dl class="popular_item_desc">
+                                <dt>남이섬 베스트 카라반</dt>
+                                <dd>자연 계곡과 맑은 공기를 만끽하세요</dd>
+                                <dd class="price">
+                                    <dl>
+                                        <dt>주중</dt>
+                                        <dd>50,000 원</dd>
+                                    </dl>
+                                    <dl>
+                                        <dt>주말</dt>
+                                        <dd>200,000 원</dd>
+                                    </dl>
+                                </dd>
+                            </dl>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <div class="popular_item_img">
+                                <p class="loc_tag">가평군</p>
+                                <img src="assets/images/thumb/thumb3.png" alt="">
+                            </div>
+                            <dl class="popular_item_desc">
+                                <dt>남이섬 베스트 카라반</dt>
+                                <dd>자연 계곡과 맑은 공기를 만끽하세요</dd>
+                                <dd class="price">
+                                    <dl>
+                                        <dt>주중</dt>
+                                        <dd>50,000 원</dd>
+                                    </dl>
+                                    <dl>
+                                        <dt>주말</dt>
+                                        <dd>200,000 원</dd>
+                                    </dl>
+                                </dd>
+                            </dl>
+                        </a>
+                    </li>
+                </ul>
+                <button class="arrow next_arrow"></button>
+            </div>
+        </div>
+    </section>
+    <section class="sec_recommend">
+        <div class="content">
+            <h2>모빌라 추천상품</h2>
+            <div class="recomm_box">
+                <ul class="ul_h">
+                    <!-- loop -->
+                    <li>
+                        <a href="#">
+                            <div class="recomm_item_img">
+                                <div class="recomm_item_desc">
+                                    <p class="loc_tag">가평군</p>
+                                    <dl>
+                                        <dt>가평 포레스트 카라반</dt>
+                                        <dd class="price">
+                                            <span class="sale_tag">76%</span>
+                                            100,000 원 ~
+                                        </dd>
+                                    </dl>
+                                </div>
+                                <img src="assets/images/thumb/thumb4.png" alt="">
+                            </div>
+                        </a>
+                    </li>
+                    <!-- loop -->
+                    <li>
+                        <a href="#">
+                            <div class="recomm_item_img">
+                                <div class="recomm_item_desc">
+                                    <p class="loc_tag">가평군</p>
+                                    <dl>
+                                        <dt>가평 포레스트 카라반</dt>
+                                        <dd class="price">
+                                            <span class="sale_tag">76%</span>
+                                            100,000 원 ~
+                                        </dd>
+                                    </dl>
+                                </div>
+                                <img src="assets/images/thumb/thumb5.png" alt="">
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <div class="recomm_item_img">
+                                <div class="recomm_item_desc">
+                                    <p class="loc_tag">가평군</p>
+                                    <dl>
+                                        <dt>가평 포레스트 카라반</dt>
+                                        <dd class="price">
+                                            <span class="sale_tag">76%</span>
+                                            100,000 원 ~
+                                        </dd>
+                                    </dl>
+                                </div>
+                                <img src="assets/images/thumb/thumb6.png" alt="">
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <div class="recomm_item_img">
+                                <div class="recomm_item_desc">
+                                    <p class="loc_tag">가평군</p>
+                                    <dl>
+                                        <dt>가평 포레스트 카라반</dt>
+                                        <dd class="price">
+                                            <span class="sale_tag">76%</span>
+                                            100,000 원 ~
+                                        </dd>
+                                    </dl>
+                                </div>
+                                <img src="assets/images/thumb/thumb7.png" alt="">
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <div class="recomm_item_img">
+                                <div class="recomm_item_desc">
+                                    <p class="loc_tag">가평군</p>
+                                    <dl>
+                                        <dt>가평 포레스트 카라반</dt>
+                                        <dd class="price">
+                                            <span class="sale_tag">76%</span>
+                                            100,000 원 ~
+                                        </dd>
+                                    </dl>
+                                </div>
+                                <img src="assets/images/thumb/thumb1.png" alt="">
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <div class="recomm_item_img">
+                                <div class="recomm_item_desc">
+                                    <p class="loc_tag">가평군</p>
+                                    <dl>
+                                        <dt>가평 포레스트 카라반</dt>
+                                        <dd class="price">
+                                            <span class="sale_tag">76%</span>
+                                            100,000 원 ~
+                                        </dd>
+                                    </dl>
+                                </div>
+                                <img src="assets/images/thumb/thumb2.png" alt="">
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <div class="partner">
+        <div class="content">
+            <div class="partner_box arrow_box">
+                <button class="arrow prev_arrow"></button>
+                <ul class="ul_h">
+                    <!-- loop -->
+                    <li><img src="assets/images/partner_bn.png" alt=""></li>
+                    <!-- //loop -->
+                    <li><img src="assets/images/partner_bn.png" alt=""></li>
+                    <li><img src="assets/images/partner_bn.png" alt=""></li>
+                    <li><img src="assets/images/partner_bn.png" alt=""></li>
+                    <li><img src="assets/images/partner_bn.png" alt=""></li>
+                </ul>
+                <button class="arrow next_arrow"></button>
+            </div>
+        </div>
+    </div>
+</div>
+<div id="fnbArea">
+    <div class="content">
+        <nav class="fnb">
+            <ul class="ul_h">
+                <li><a href="#">회원이용약관</a></li>
+                <li><a href="#">개인정보처리방침</a></li>
+                <li><a href="#">이메일무단수집거부</a></li>
+                <li><a href="#">사업자정보확인</a></li>
+                <li><a href="#">KICC ESCROW</a></li>
+            </ul>
+        </nav>
+    </div>
+</div>
