--- a/src/app/home/layout/footer/footer.component.html
+++ b/src/app/home/layout/footer/footer.component.html
@@ -1,1 +1,16 @@
-<p>footer works!</p>
+<footer id="footer">
+    <div class="content">
+        <p class="c_name">모빌라 주식회사</p>
+        <ul class="ul_h">
+            <li>대표: 백준석</li>
+            <li>이메일: movilla8@uip.co.kr</li>
+            <li>개인정보관리책임자: 금수현</li>
+            <li>사업자등록번호: 534-87-01707</li>
+            <li>사업장 주소: 서울특별시 영등포구 선유로 146, 910호(양평동3가)</li>
+            <li>전화번호: 031-932-8188</li>
+        </ul>
+        <p class="copyright">
+            copyrightⓒ 모빌라 all rights reserved.
+        </p>
+    </div>
+</footer>
