--- a/src/app/home/layout/header/header.component.html
+++ b/src/app/home/layout/header/header.component.html
@@ -1,3 +1,27 @@
-<div>
-    header
+<div id="top">
+    <div class="content">
+        <div class="search_box">
+            <input type="text" placeholder="검색어를 입력해주세요">
+            <button class="search_btn"><span class="blind">검색</span></button>
+        </div>
+        <nav class="util">
+            <ul>
+                <li><a routerLink="login">LOGIN</a></li>
+            </ul>
+        </nav>
+    </div>
 </div>
+<header id="header">
+    <div class="content">
+        <h1 class="logo"><a href="#"><img src="assets/images/logo.png" alt="모빌라"></a></h1>
+        <nav class="gnb">
+            <ul>
+                <li><a href="#">모빌라캠핑장</a></li>
+                <li><a href="#">모빌라홀캠핑장</a></li>
+                <li><a href="#">단체행사</a></li>
+                <li><a href="#">이벤트</a></li>
+                <li><a href="#">커뮤니티</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
