로그인 세션 적용 	modified:   src/app/global/global.ts 	modified:   src/app/home/layout/header/header.component.html 	modified:   src/app/home/layout/header/header.component.ts 	modified:   src/app/home/login/login.component.ts

--- a/src/app/home/layout/header/header.component.html
+++ b/src/app/home/layout/header/header.component.html
@@ -6,7 +6,8 @@
         </div>
         <nav class="util">
             <ul>
-                <li><a routerLink="login">LOGIN</a></li>
+                <li *ngIf="!isLoggedIn"><a (click)="goLogin()">LOGIN</a></li>
+                <li *ngIf="isLoggedIn"><a (click)="logout()">MyPage</a></li>
             </ul>
         </nav>
     </div>
